<resources>
    <string name="app_name">Jendela PMI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_desc">logo</string>
    <string name="mobil_udd">mobil udd</string>
    <string name="more_info_pmi">MORE INFO PMI</string>
    <string name="schedule">SCHEDULE</string>
    <string name="lihat_lainnya"><![CDATA[Lihat Lainnya >]]></string>
    <string name="user_image">user image</string>
    <string name="user">User</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="tempat_tanggal_lahir">Tempat, Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="gol_darah">Gol. Darah</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="explore_udd_pmi_kab_banyuwangi">EXPLORE UDD PMI KAB. BANYUWANGI</string>
    <string name="more_info">MORE INFO</string>
    <string name="logoapp">logoapp</string>
    <string name="hint_nama">Nama</string>
    <string name="hint_tempat_tanggal_lahir">Tempat, Tanggal Lahir</string>
    <string name="hint_alamat">Alamat</string>
    <string name="hint_gol_darah">Gol. Darah</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="txt_btn_daftar">Daftar</string>
    <string name="txt_divider_atau">Atau</string>
    <string name="txt_btn_masuk">Masuk</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="jadwal_mobil_pelayanan_untuk_para_pendonor">Jadwal Mobil Pelayanan untuk para Pendonor</string>
    <string name="jadwal_mobil_donor">JADWAL MOBIL DONOR</string>
    <string name="back">back</string>
    <string name="tanggal">Tanggal</string>
    <string name="jam">Jam</string>
    <string name="instansi">Instansi</string>
    <string name="tempat">Tempat</string>
</resources>