<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <TextView
        android:id="@+id/col_tanggal"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/tanggal"
        android:textStyle="bold" />

    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="@color/black" />

    <TextView
        android:id="@+id/col_jam"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/jam"
        android:textStyle="bold" />

    <View
        android:layout_width="1dp"
        android:layout_height="60dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/col_instansi"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/instansi"
        android:textStyle="bold" />

    <View
        android:layout_width="1dp"
        android:layout_height="60dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/col_tempat"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:padding="8dp"
        android:layout_weight="1"
        android:text="@string/tempat"
        android:textStyle="bold" />

</TableRow>