<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.JadwalMUFragment">

    <LinearLayout
        android:id="@+id/gaya"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/main_1" />

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2.2"
            android:background="@color/main_2" />

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:background="@color/main_3" />

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@color/main_4" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/parent_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="17dp"
            android:contentDescription="@string/back"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/heading_stokdarah"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/main_1"
            android:gravity="center"
            android:text="@string/jadwal_mobil_donor"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="8pt" />

        <LinearLayout
            android:id="@+id/group_jadwal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading_stokdarah"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:background="@color/main_8"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jadwal_mobil_pelayanan_untuk_para_pendonor" />
        </LinearLayout>

        <TableRow
            android:id="@+id/row_th"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/group_jadwal"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@color/main_1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/tanggal"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@color/main_1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/jam"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@color/main_1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/instansi"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="@color/main_1"
                android:gravity="center"
                android:padding="8dp"
                android:layout_weight="1"
                android:text="@string/tempat"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </TableRow>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/row_container_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/row_th"
            tools:listitem="@layout/item_table"/>

    </RelativeLayout>

</LinearLayout>