<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    tools:context=".fragments.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/main_1" />

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2.2"
            android:background="@color/main_2" />

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:background="@color/main_3" />

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@color/main_4" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <ImageView
            android:id="@+id/icon_jendelaPMI"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logoapp"
            android:layout_margin="44dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logoapp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_reg_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_jendelaPMI"
            app:boxStrokeColor="@color/main_7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textFilter|textPersonName"
                android:hint="@string/hint_nama"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_reg_ttl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_reg_nama"
            app:boxStrokeColor="@color/main_7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textFilter"
                android:hint="@string/hint_tempat_tanggal_lahir"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_reg_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_reg_ttl"
            app:boxStrokeColor="@color/main_7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textFilter"
                android:hint="@string/hint_alamat"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_reg_goldarah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_reg_alamat"
            app:boxStrokeColor="@color/main_7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textFilter"
                android:hint="@string/hint_gol_darah"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_reg_goldarah"
            app:boxStrokeColor="@color/main_7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textFilter|textEmailAddress"
                android:hint="@string/hint_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_reg_email"
            app:boxStrokeColor="@color/main_7"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textFilter|textPassword"
                android:hint="@string/hint_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/group1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_reg_password"
            android:layout_margin="15dp"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:text="@string/txt_btn_daftar"
                android:textColor="@color/black"
                android:backgroundTint="@color/elt_3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.3">

                <View
                    android:layout_weight="1"
                    android:layout_width="0dip"
                    android:layout_height="2dp"
                    android:background="@color/main_7"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_weight="0.3"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_divider_atau"
                    android:textColor="@color/black"
                    android:gravity="center"/>

                <View
                    android:layout_weight="1"
                    android:layout_width="0dip"
                    android:layout_height="2dp"
                    android:background="@color/main_7"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/txt_btn_masuk"
                android:textColor="@color/elt_6"/>
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>