<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".fragments.EditProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/poni"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@color/main_1" />

            <View
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="2.2"
                android:background="@color/main_2" />

            <View
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:background="@color/main_3" />

            <View
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:background="@color/main_4" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/poni"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_circle"
            android:contentDescription="@string/user_image"
            android:padding="15dp"
            android:src="@drawable/ic_akun" />

        <TextView
            android:id="@+id/lbl_fullname_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/user"
            android:textColor="@color/main_1"
            android:textSize="12pt" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_edit_fullname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_fullname_edit"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            app:boxStrokeColor="@color/main_1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nama_pengguna" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_edit_ttl"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_edit_fullname"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            app:boxStrokeColor="@color/main_1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/tempat_tanggal_lahir" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_edit_alamat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_edit_ttl"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            app:boxStrokeColor="@color/main_1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/alamat" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_edit_golongan_darah"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_edit_alamat"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            app:boxStrokeColor="@color/main_1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/gol_darah" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_edit_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_edit_golongan_darah"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            app:boxStrokeColor="@color/main_1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_edit_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_edit_email"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            app:boxStrokeColor="@color/main_1"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/kata_sandi_baru" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit_simpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_edit_password"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/elt_3"
            android:text="@string/simpan"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit_batal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_edit_password"
            android:layout_marginStart="150dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@id/btn_edit_simpan"
            android:backgroundTint="@color/elt_3"
            android:text="@string/batal"
            android:textColor="@color/black" />
    </RelativeLayout>


</ScrollView>