<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    tools:context=".fragments.UDDFragment">

    <LinearLayout
        android:id="@+id/gaya"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/main_1" />

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2.2"
            android:background="@color/main_2" />

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:background="@color/main_3" />

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:background="@color/main_4" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logoapp"
        android:layout_below="@id/gaya"
        android:contentDescription="@string/logo_desc" />

    <TextView
        android:id="@+id/lbl_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/logo"
        android:text="@string/explore_udd_pmi_kab_banyuwangi"
        android:textStyle="bold"
        android:textColor="@color/main_1"/>

<!--    <org.imaginativeworld.whynotimagecarousel.ImageCarousel-->
<!--        android:id="@+id/carousel"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="200dp"-->
<!--        android:layout_marginHorizontal="30dp"-->
<!--        android:layout_marginBottom="25dp"-->
<!--        android:layout_below="@id/lbl_explore"-->
<!--        app:imageScaleType="centerCrop"-->
<!--        app:carouselPadding="30dp" />-->

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/lbl_explore"/>

    <TextView
        android:id="@+id/lbl_more_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/vp2"
        android:text="@string/more_info"
        android:textStyle="bold"
        android:textColor="@color/main_1"/>

    <org.imaginativeworld.whynotimagecarousel.ImageCarousel
        android:id="@+id/carousel2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/lbl_more_info"
        app:imageScaleType="centerCrop"
        app:carouselPadding="30dp" />

</RelativeLayout>