<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    tools:context=".fragments.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/gaya"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@color/main_1" />

            <View
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="2.2"
                android:background="@color/main_2" />

            <View
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:background="@color/main_3" />

            <View
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:background="@color/main_4" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_mobil"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/gaya"
            android:src="@drawable/mobil_dd"
            android:contentDescription="@string/mobil_udd"/>

        <TextView
            android:id="@+id/lbl_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_mobil"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/more_info_pmi"
            android:textStyle="bold"
            android:textColor="@color/main_1"/>

        <org.imaginativeworld.whynotimagecarousel.ImageCarousel
            android:id="@+id/carousel"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@id/lbl_more_info"
            app:imageScaleType="centerCrop"
            app:carouselPadding="30dp" />

        <TableLayout
            android:id="@+id/container_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="30dp"
            android:layout_below="@id/carousel"
            android:stretchColumns="1">

            <TableRow>
                <TextView
                    android:text="@string/schedule"
                    android:textStyle="bold"
                    android:textColor="@color/main_1"
                    android:layout_gravity="start"/>
                <TextView
                    android:text="@string/lihat_lainnya"
                    android:textStyle="bold"
                    android:textColor="@color/main_1"
                    android:layout_gravity="end"/>
            </TableRow>
        </TableLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/kegiatan_container_rv"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/container_schedule"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="30dp"
            app:cardBackgroundColor="@color/main_6_transparan"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_kegiatan_pmi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@color/main_6_transparan"
                tools:listitem="@layout/item_kegiatan"/>
        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:layout_gravity="center_horizontal"
        android:elevation="10dp"
        tools:targetApi="lollipop">

        <Button
            android:id="@+id/btn_stok_darah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:text="STOK DARAH\nUDD PMI"/>

        <Button
            android:id="@+id/btn_mobile_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btn_stok_darah"
            android:layout_toEndOf="@id/btn_stok_darah"
            android:text="MOBILE UNIT\nUDD PMI" />
    </RelativeLayout>

</FrameLayout>